# Volatility-Surface-Monitor

./: .gitignore  README.md  app.py  config.yaml  dashboard.py  pyproject.toml  requirements.txt  streamlit_app.py  train_gmm.py
.streamlit/: config.toml
dashboard/: app.py
notebooks/: 01_data_exploration.ipynb  02_surface_construction.ipynb  03_geometry_analysis.ipynb  04_regime_classification.ipynb  05_arbitrage_detection.ipynb  06_tail_risk.ipynb  07_backtesting.ipynb  gmm_backtesting.ipynb
src/: __init__.py
src/analytics/: __init__.py  arbitrage.py  geometry.py  ml_signals.py  regime_classifier.py  regime_hmm.py  tail_risk.py  temporal.py
src/data/: __init__.py  cache.py  cleaner.py  fetcher.py
src/models/: __init__.py  black_scholes.py  density.py  surface.py  svi.py
src/portfolio/: __init__.py  analyzer.py  insights.py  manager.py
src/reporting/: __init__.py  generator.py
src/visualization/: __init__.py  heatmaps.py  regime_visuals.py  surface_plots.py  time_series.py
tests/: __init__.py  test_arbitrage.py  test_black_scholes.py  test_geometry.py  test_regime_classifier.py
